--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     						<div class="hovereffect">
         					<img class="img-responsive" src="images/Ad_1_Web.jpg" alt="">
             			<div class="overlay">
-	                	<h2>Share</h2>
+	                	<a href="/images/Ad_1_Web.jpg" target="_blank"><h2>Share Now</h2></a>
 	                	<p class="icon-links">
 	                    <a href="#">
 	                      <span class="fa fa-whatsapp"></span>
@@ -199,7 +199,7 @@
 	            	<div class="hovereffect">
         					<img class="img-responsive" src="images/Ad_2_Web.jpg" alt="">
             			<div class="overlay">
-	                	<h2>Share</h2>
+	                	<a href="/images/Ad_2_Web.jpg" target="_blank"><h2>Share Now</h2></a>
 	                	<p class="icon-links">
 	                    <a href="#">
 	                      <span class="fa fa-whatsapp"></span>
@@ -224,7 +224,7 @@
 			        	<div class="hovereffect">
         					<img class="img-responsive" src="images/Ad_3_Web.jpg" alt="">
             			<div class="overlay">
-	                	<h2>Share</h2>
+	                	<a href="/images/Ad_3_Web.jpg" target="_blank"><h2>Share Now</h2></a>
 	                	<p class="icon-links">
 	                    <a href="#">
 	                      <span class="fa fa-whatsapp"></span>
@@ -257,7 +257,7 @@
 				<div class="fh5co-section-content-wrap">
 					<div class="fh5co-section-content">
 						<div class="row">
-							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="width:100; text-align:center;color: #fff; opacity: 0.99;">Casualties</h2>
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="width:100; text-align:center;color: #fff; opacity: 0.99;">Piercing Pain</h2>
 
 							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 								<div class="icon">
@@ -291,8 +291,10 @@
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-12 text-center">
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align: left;">During the current onslaught of state violence, the indiscriminate use of pellet shotguns by its forces has resulted in an estimated 105 civilians being partially or totally blinded. These 12-guage, pump-action shotguns first put to use during the 2010 uprising are maiming and blinding the unarmed civilians which include kids as young as 5-year-old and elderly as old as 80-year-old. 
-						<br>Fearing profiling and reprisals of injured youths by police, hospital officials have assigned serial numbers to pellet gun victims to hide their identity from undercover police officers who are roaming the hospitals hunting for injured protesters.</p>
+						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align: left;">
+						<p>
+						During the current onslaught of state violence, the indiscriminate use of pellet shotguns by its forces has resulted in an estimated 105 civilians being partially or totally blinded. These 12-guage, pump-action shotguns first put to use during the 2010 uprising are maiming and blinding the unarmed civilians which include kids as young as 5-year-old and elderly as old as 80-year-old. </p>
+						<p>Fearing profiling and reprisals of injured youths by police, hospital officials have assigned serial numbers to pellet gun victims to hide their identity from undercover police officers who are roaming the hospitals hunting for injured protesters.</p></div>
 					</div>
 				</div>
 				<div class="row">
@@ -398,7 +400,7 @@
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Coverage</h2>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A choice of news stories the world and local media has covered about the resent cycle of violence unleashed by the state </p>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A choice of news stories the world and local media has covered about the recent cycle of violence unleashed by the state </p>
 					</div>
 				</div>
 				<div class="row p-b">
