--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 				<div class="fh5co-section-content-wrap">
 					<div class="fh5co-section-content">
 						<div class="row">
-							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="width:100; text-align:center;color: #fff; opacity: 0.99;">Piercing Pain</h2>
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="width:100; text-align:center;color: #fff; opacity: 0.99;">Casualties</h2>
 
 							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 								<div class="icon">
@@ -291,6 +291,7 @@
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-12 text-center">
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="width:100; text-align:center;color: #fff; opacity: 0.99;">Piercing Pain</h2>
 						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align: left;">
 						<p>
 						During the current onslaught of state violence, the indiscriminate use of pellet shotguns by its forces has resulted in an estimated 105 civilians being partially or totally blinded. These 12-guage, pump-action shotguns first put to use during the 2010 uprising are maiming and blinding the unarmed civilians which include kids as young as 5-year-old and elderly as old as 80-year-old. </p>
@@ -400,7 +401,7 @@
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Coverage</h2>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A choice of news stories the world and local media has covered about the recent cycle of violence unleashed by the state </p>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align:left;">A choice of news stories the world and local media has covered about the recent cycle of violence unleashed by the state </p>
 					</div>
 				</div>
 				<div class="row p-b">
@@ -446,11 +447,11 @@
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 				</div>
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-md-4 col-md-offset-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="2s">
 						<a href="#" class="btn btn-primary btn-lg">More News</a>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="fh5co-footer-style-3" id="about" style="color:#fff">
