--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 	<meta property="og:url" content="http://kashmirblindspot.jkccs.net"/>
 	<meta property="og:site_name" content="JKCCS"/>
 	<meta property="og:description" content="A passionate plea to open eyes and hearts to Kashmir’s pain."/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta name="twitter:title" content="JKCCS" />
+	<meta property="twitter:image" content="http://139.59.252.217:3000/images/Ad_1_Web.jpg"/>
+	<meta property="twitter:image" content="http://139.59.252.217:3000/images/Ad_2_Web.jpg"/>
+	<meta property="twitter:image" content="http://139.59.252.217:3000/images/Ad_3_Web.jpg"/>
+	<meta name="twitter:url" content="http://kashmirblindspot.jkccs.net" />
+	<meta name="twitter:card" content="A passionate plea to open eyes and hearts to Kashmir’s pain." />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
@@ -179,7 +181,7 @@
 	                    <a href="whatsapp://send?text=http%3A//139.59.252.217%3A3000/" target="_blank">
 	                      <span class="fa fa-whatsapp"></span>
 	                    </a>
-	                    <a href="#">
+	                    <a href="https://twitter.com/home?status=Kashmir%20Blind-Spot%20Campaign%20http%3A//139.59.252.217%3A3000/" target="_blank">
 	                      <span class="fa fa-twitter"></span>
 	                    </a>
 	                    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//139.59.252.217%3A3000/">
@@ -204,10 +206,10 @@
 	                    <a href="whatsapp://send?text=http%3A//139.59.252.217%3A3000/" target="_blank">
 	                      <span class="fa fa-whatsapp"></span>
 	                    </a>
-	                    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//139.59.252.217%3A3000/">
+	                    <a href="https://twitter.com/home?status=Kashmir%20Blind-Spot%20Campaign%20http%3A//139.59.252.217%3A3000/" target="_blank">
 	                      <span class="fa fa-twitter"></span>
 	                    </a>
-	                    <a href="#">
+	                    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//139.59.252.217%3A3000/">
 	                      <span class="fa fa-facebook"></span>
 	                    </a>
 	                    <a href="mailto:cp@ohchr.org?subject=APPEAL for URGENT ACTION regarding deteriorating political and humanitarian situation in Kashmir&body=Mr Zeid Ra’ad Al Hussein,%0D%0A%0D%0AYour Excellency,%0D%0A%0D%0AThis is with grave concern and urgency I write to you today to bring to your immediate attention the ongoing State violence and repression against civilians in Jammu and Kashmir including repeated attacks on medical services, particularly hospital ambulances, carrying the dead and critically injured civilians. %0D%0A%0D%0AI appeal for your urgent intervention by demanding from Government of India the following immediate measures in the occupied territory of Jammu and Kashmir:%0D%0A%0D%0Ai. Prohibit and ban the use of pellet shotguns with immediate effect,%0D%0A%0D%0Aii. Prohibit and temporarily ban the use of live ammunition and any other lethal weapons against civilian demonstrators,%0D%0A%0D%0Aiii. Prohibit any and all attacks on medical services including by prohibiting any state forces personnel from entering any hospital premise in Jammu and Kashmir,%0D%0A%0D%0Aiv. Immediately lift the unlawful curfew and ban on peaceful public demonstrations including the holding of funerals or public tributes organized,%0D%0A%0D%0Av. Immediately lift the unlawful mobile phone services and internet ban,%0D%0A%0D%0Avi. Ensure freedom of press and prohibit any interference with the work of news agencies,%0D%0A%0D%0Avii. Allow immediate and unhindered access to Jammu and Kashmir to the United Nations High Commissioner for Human Rights and special procedures of the Human Rights Council,%0D%0A%0D%0Aviii. Immediately register criminal cases for every instance of violence by state forces, including on medical services, and make public such registration of cases, and carry out investigations,%0D%0A%0D%0Aix. Immediately, in the form of reparations, make payment where sought to victims of violence.%0D%0A%0D%0A%0D%0A%0D%0ASincerely,">
@@ -229,7 +231,7 @@
 	                    <a href="whatsapp://send?text=http%3A//139.59.252.217%3A3000/" target="_blank">
 	                      <span class="fa fa-whatsapp"></span>
 	                    </a>
-	                    <a href="#">
+	                    <a href="https://twitter.com/home?status=Kashmir%20Blind-Spot%20Campaign%20http%3A//139.59.252.217%3A3000/" target="_blank">
 	                      <span class="fa fa-twitter"></span>
 	                    </a>
 	                    <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//139.59.252.217%3A3000/" target="_blank">
