--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<meta property="og:image" content="http://139.59.252.217:3000/images/Ad_3_Web.jpg"/>
 	<meta property="og:url" content="http://kashmirblindspot.jkccs.net"/>
 	<meta property="og:site_name" content="JKCCS"/>
-	<meta property="og:description" content="A passionate plea to open eyes and hearts to Kashmir’s pain."/>
+	<meta property="og:description" content="A passionate plea to open eyes and hearts to Kashmir's pain. "/>
 	<meta name="twitter:title" content="JKCCS" />
 	<meta property="twitter:image" content="http://139.59.252.217:3000/images/Ad_1_Web.jpg"/>
 	<meta property="twitter:image" content="http://139.59.252.217:3000/images/Ad_2_Web.jpg"/>
@@ -178,13 +178,13 @@
             			<div class="overlay">
 	                	<a href="/images/Ad_1_Web.jpg" target="_blank"><h2>Share Now</h2></a>
 	                	<p class="icon-links">
-	                    <a href="whatsapp://send?text=http%3A//139.59.252.217%3A3000/" target="_blank">
+	                    <a href="whatsapp://send?text=%23KashmirBlindSpotCampaign%3A%20A%20passionate%20plea%20to%20open%20eyes%20and%20hearts%20to%20Kashmir's%20pain.%20http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-whatsapp"></span>
 	                    </a>
-	                    <a href="https://twitter.com/home?status=Kashmir%20Blind-Spot%20Campaign%20http%3A//139.59.252.217%3A3000/" target="_blank">
+	                    <a href="https://twitter.com/home?status=%23KashmirBlindSpotCampaign%3A%20A%20passionate%20plea%20to%20open%20eyes%20and%20hearts%20to%20Kashmir's%20pain.%20http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-twitter"></span>
 	                    </a>
-	                    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//139.59.252.217%3A3000/">
+	                    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=%20http%3A//kashmirblindspot.jkccs.net">
 	                      <span class="fa fa-facebook"></span>
 	                    </a>
 	                    <a href="mailto:cp@ohchr.org?subject=APPEAL for URGENT ACTION regarding deteriorating political and humanitarian situation in Kashmir&body=Mr Zeid Ra’ad Al Hussein,%0D%0A%0D%0AYour Excellency,%0D%0A%0D%0AThis is with grave concern and urgency I write to you today to bring to your immediate attention the ongoing State violence and repression against civilians in Jammu and Kashmir including repeated attacks on medical services, particularly hospital ambulances, carrying the dead and critically injured civilians. %0D%0A%0D%0AI appeal for your urgent intervention by demanding from Government of India the following immediate measures in the occupied territory of Jammu and Kashmir:%0D%0A%0D%0Ai. Prohibit and ban the use of pellet shotguns with immediate effect,%0D%0A%0D%0Aii. Prohibit and temporarily ban the use of live ammunition and any other lethal weapons against civilian demonstrators,%0D%0A%0D%0Aiii. Prohibit any and all attacks on medical services including by prohibiting any state forces personnel from entering any hospital premise in Jammu and Kashmir,%0D%0A%0D%0Aiv. Immediately lift the unlawful curfew and ban on peaceful public demonstrations including the holding of funerals or public tributes organized,%0D%0A%0D%0Av. Immediately lift the unlawful mobile phone services and internet ban,%0D%0A%0D%0Avi. Ensure freedom of press and prohibit any interference with the work of news agencies,%0D%0A%0D%0Avii. Allow immediate and unhindered access to Jammu and Kashmir to the United Nations High Commissioner for Human Rights and special procedures of the Human Rights Council,%0D%0A%0D%0Aviii. Immediately register criminal cases for every instance of violence by state forces, including on medical services, and make public such registration of cases, and carry out investigations,%0D%0A%0D%0Aix. Immediately, in the form of reparations, make payment where sought to victims of violence.%0D%0A%0D%0A%0D%0A%0D%0ASincerely,">
@@ -203,13 +203,13 @@
             			<div class="overlay">
 	                	<a href="/images/Ad_2_Web.jpg" target="_blank"><h2>Share Now</h2></a>
 	                	<p class="icon-links">
-	                    <a href="whatsapp://send?text=http%3A//139.59.252.217%3A3000/" target="_blank">
+	                    <a href="whatsapp://send?text=%23KashmirBlindSpotCampaign%3A%20A%20passionate%20plea%20to%20open%20eyes%20and%20hearts%20to%20Kashmir's%20pain.%20http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-whatsapp"></span>
 	                    </a>
-	                    <a href="https://twitter.com/home?status=Kashmir%20Blind-Spot%20Campaign%20http%3A//139.59.252.217%3A3000/" target="_blank">
+	                    <a href="https://twitter.com/home?status=%23KashmirBlindSpotCampaign%3A%20A%20passionate%20plea%20to%20open%20eyes%20and%20hearts%20to%20Kashmir's%20pain.%20http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-twitter"></span>
 	                    </a>
-	                    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//139.59.252.217%3A3000/">
+	                    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=%20http%3A//kashmirblindspot.jkccs.net">
 	                      <span class="fa fa-facebook"></span>
 	                    </a>
 	                    <a href="mailto:cp@ohchr.org?subject=APPEAL for URGENT ACTION regarding deteriorating political and humanitarian situation in Kashmir&body=Mr Zeid Ra’ad Al Hussein,%0D%0A%0D%0AYour Excellency,%0D%0A%0D%0AThis is with grave concern and urgency I write to you today to bring to your immediate attention the ongoing State violence and repression against civilians in Jammu and Kashmir including repeated attacks on medical services, particularly hospital ambulances, carrying the dead and critically injured civilians. %0D%0A%0D%0AI appeal for your urgent intervention by demanding from Government of India the following immediate measures in the occupied territory of Jammu and Kashmir:%0D%0A%0D%0Ai. Prohibit and ban the use of pellet shotguns with immediate effect,%0D%0A%0D%0Aii. Prohibit and temporarily ban the use of live ammunition and any other lethal weapons against civilian demonstrators,%0D%0A%0D%0Aiii. Prohibit any and all attacks on medical services including by prohibiting any state forces personnel from entering any hospital premise in Jammu and Kashmir,%0D%0A%0D%0Aiv. Immediately lift the unlawful curfew and ban on peaceful public demonstrations including the holding of funerals or public tributes organized,%0D%0A%0D%0Av. Immediately lift the unlawful mobile phone services and internet ban,%0D%0A%0D%0Avi. Ensure freedom of press and prohibit any interference with the work of news agencies,%0D%0A%0D%0Avii. Allow immediate and unhindered access to Jammu and Kashmir to the United Nations High Commissioner for Human Rights and special procedures of the Human Rights Council,%0D%0A%0D%0Aviii. Immediately register criminal cases for every instance of violence by state forces, including on medical services, and make public such registration of cases, and carry out investigations,%0D%0A%0D%0Aix. Immediately, in the form of reparations, make payment where sought to victims of violence.%0D%0A%0D%0A%0D%0A%0D%0ASincerely,">
@@ -228,13 +228,13 @@
             			<div class="overlay">
 	                	<a href="/images/Ad_3_Web.jpg" target="_blank"><h2>Share Now</h2></a>
 	                	<p class="icon-links">
-	                    <a href="whatsapp://send?text=http%3A//139.59.252.217%3A3000/" target="_blank">
+	                    <a href="whatsapp://send?text=%23KashmirBlindSpotCampaign%3A%20A%20passionate%20plea%20to%20open%20eyes%20and%20hearts%20to%20Kashmir's%20pain.%20http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-whatsapp"></span>
 	                    </a>
-	                    <a href="https://twitter.com/home?status=Kashmir%20Blind-Spot%20Campaign%20http%3A//139.59.252.217%3A3000/" target="_blank">
+	                    <a href="https://twitter.com/home?status=%23KashmirBlindSpotCampaign%3A%20A%20passionate%20plea%20to%20open%20eyes%20and%20hearts%20to%20Kashmir's%20pain.%20http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-twitter"></span>
 	                    </a>
-	                    <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//139.59.252.217%3A3000/" target="_blank">
+	                    <a href="https://www.facebook.com/sharer/sharer.php?u=%20http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-facebook"></span>
 	                    </a>
 	                    <a href="mailto:cp@ohchr.org?subject=APPEAL for URGENT ACTION regarding deteriorating political and humanitarian situation in Kashmir&body=Mr Zeid Ra’ad Al Hussein,%0D%0A%0D%0AYour Excellency,%0D%0A%0D%0AThis is with grave concern and urgency I write to you today to bring to your immediate attention the ongoing State violence and repression against civilians in Jammu and Kashmir including repeated attacks on medical services, particularly hospital ambulances, carrying the dead and critically injured civilians. %0D%0A%0D%0AI appeal for your urgent intervention by demanding from Government of India the following immediate measures in the occupied territory of Jammu and Kashmir:%0D%0A%0D%0Ai. Prohibit and ban the use of pellet shotguns with immediate effect,%0D%0A%0D%0Aii. Prohibit and temporarily ban the use of live ammunition and any other lethal weapons against civilian demonstrators,%0D%0A%0D%0Aiii. Prohibit any and all attacks on medical services including by prohibiting any state forces personnel from entering any hospital premise in Jammu and Kashmir,%0D%0A%0D%0Aiv. Immediately lift the unlawful curfew and ban on peaceful public demonstrations including the holding of funerals or public tributes organized,%0D%0A%0D%0Av. Immediately lift the unlawful mobile phone services and internet ban,%0D%0A%0D%0Avi. Ensure freedom of press and prohibit any interference with the work of news agencies,%0D%0A%0D%0Avii. Allow immediate and unhindered access to Jammu and Kashmir to the United Nations High Commissioner for Human Rights and special procedures of the Human Rights Council,%0D%0A%0D%0Aviii. Immediately register criminal cases for every instance of violence by state forces, including on medical services, and make public such registration of cases, and carry out investigations,%0D%0A%0D%0Aix. Immediately, in the form of reparations, make payment where sought to victims of violence.%0D%0A%0D%0A%0D%0A%0D%0ASincerely,">
@@ -401,9 +401,12 @@
 		<div class="fh5co-blog-style-1" id="coverage" style="background: #b7cc80;">
 			<div class="container">
 				<div class="row p-b">
-					<div class="col-md-6 col-md-offset-3 text-center">
+					<div class="col-md-10 col-md-offset-1 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Coverage</h2>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align:left;">A choice of news stories the world and local media has covered about the recent cycle of violence unleashed by the state </p>
+						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align:left;">
+						<p>The state apparatus imposed the worst form of communications clampdown in Kashmir by banning the local newspapers, the Internet services and mobile networks to stop the news of state excesses from reaching the world. </p>
+						<p>
+						This happened in the backdrop of India’s dubious claim of championing the cause of digital democracy and the digital outreach. Kashmir is still under curfew. Seven million people are under an unprecedented lockdown, and the state is further toughening the so-called security measures. </p></div>
 					</div>
 				</div>
 				<div class="row p-b">
