--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A passionate plea to open eyes and hearts to Kashmir’s pain.</h2>
 								<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s" style="color:#dedede;">
 									<p>
-										The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in cold bold on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 50 civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds.
+										The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 55+ civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds.
 									</p>
 									<p>
 									 The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at drawing the attention of the world community toward the blind-spot Kashmir has turned into over the years.
@@ -134,14 +134,14 @@
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Kashmir in Context of Current Crisis</h2>
 						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align:left;">
 							<p>
-								Jammu and Kashmir is under a brutal state aggression that aims to control the population, crackdown on collective protests, restrict all civilian rights and break the will of the people who demand the occupation to uphold its right to self-determination.
+								Jammu and Kashmir is under a brutal occupation that aims to control the population, crackdown on collective protests, restrict all civilian rights and break the will of the people who demand their right of self-determination.
 							</p>
 							<p>
 								The present violence is continuation of this state repression since decades, whereby people’s human rights have been grossly violated through systematic oppressive tactics by the state apparatus.
 							</p>
 							<p>
-								Thus far, militarily occupied Jammu Kashmir with over 700,000 Indian armed forces personnel have been complicit of killing 70, 000 people, over 8000 enforced disappearances and countless cases of torture and sexual violence.
-								In this occupied territory, the Indian state has given legal impunity to its armed forces as to exonerate potential war crimes. The Indian state not only stands in violation of its own laws but international laws and in particular the Geneva Conventions.
+								Thus far, military occupied Jammu and Kashmir with over 7, 00,000 India armed forces, has seen widespread and systematic human rights abuses including over 70, 000 killings, 8000+ enforced disappearances and countless cases of torture and sexual violence.
+								In this occupied territory, the Indian state has given legal impunity to its armed forces so as to protect them from prosecution for international crimes including war crimes. The Indian state not only stands in violation of its own laws but international laws and in particular the Geneva Conventions.
 							</p>
 							<p>
 								Jammu Kashmir Coalition of Civil Society (JKCCS), on behalf of the resilient people of Jammu and Kashmir launches - Messages from a Blind Spot - a compassionate campaign to remind the international community of the sufferings caused by the aggression of the State in a region where people’s rightful demand to self-determination is trampled under the jackboots with brute force.
@@ -162,10 +162,10 @@
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:#000;">Kashmir Blind Spot Campaign</h2>
 						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s" style="text-align:left; color:#000;">
 						<p style="color:#000">
-						Make the whole world know about the illegal use of pellet guns being indiscriminately used by the Indian forces on unarmed civilians in Kashmir.
+						Make the whole world know about the illegal use of pellet shotguns being indiscriminately used by the Indian forces on unarmed civilians in Kashmir.
 						</p>
 						<p style="color:#000">
-						Please highlight the scourge of the state violence by writing to the Office of the Commissioner Human Rights Council and sharing the campaign widely on social media. We thank you for showing compassion and appreciate your time and concern. </p>
+						Please highlight the scourge of the state violence by writing to the Office of the United Nations High Commissioner for Human Rights and sharing the campaign widely on social media. We thank you for showing compassion and appreciate your time and concern. </p>
 						</div>
 					</div>
 				</div>
@@ -273,14 +273,14 @@
 								<div class="icon">
 									<i class="fa fa-eye" aria-hidden="true"></i>
 								</div>
-								<span class="fh5co-counter js-counter" data-from="0" data-to="115" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter js-counter" data-from="0" data-to="300" data-speed="5000" data-refresh-interval="50"></span>
 								<span class="fh5co-counter-label">Eye Damage</span>
 							</div>
 							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
 								<div class="icon">
 									<i class="fa fa-ambulance" aria-hidden="true""></i>
 								</div>
-								<span class="fh5co-counter js-counter" data-from="0" data-to="3000" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter js-counter" data-from="0" data-to="4500" data-speed="5000" data-refresh-interval="50"></span>
 								<span class="fh5co-counter-label">Injured</span>
 							</div>
 						</div>
@@ -296,7 +296,7 @@
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="width:100; text-align:center;color: #000; opacity: 0.99;">Piercing Pain</h2>
 						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align: left;">
 						<p>
-						During the current onslaught of state violence, the indiscriminate use of pellet shotguns by its forces has resulted in an estimated 105 civilians being partially or totally blinded. These 12-guage, pump-action shotguns first put to use during the 2010 uprising are maiming and blinding the unarmed civilians which include kids as young as 5-year-old and elderly as old as 80-year-old. </p>
+						During the current onslaught of state violence, the indiscriminate use of pellet shotguns by its forces has resulted in an estimated 105 civilians being partially or totally blinded. These 12-guage, pump-action shotguns first put to use during the 2010 uprising are maiming and blinding the unarmed civilians which include kids as young as 5-year-old and elderly as old as eighty. </p>
 						<p>Fearing profiling and reprisals of injured youths by police, hospital officials have assigned serial numbers to pellet gun victims to hide their identity from undercover police officers who are roaming the hospitals hunting for injured protesters.</p></div>
 					</div>
 				</div>
