--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A passionate plea to open eyes and hearts to Kashmir’s pain.</h2>
 								<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s" style="color:#dedede;">
 									<p>
-										The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 55+ civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds.
+										The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 55+ civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds.
 									</p>
 									<p>
 									 The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at drawing the attention of the world community toward the blind-spot Kashmir has turned into over the years.
