--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Kashmir BlindSpot Campaign"/>
-	<meta property="og:image" content="http://139.59.252.217:3000/images/Ad_1_Web.jpg"/>
-	<meta property="og:image" content="http://139.59.252.217:3000/images/Ad_2_Web.jpg"/>
-	<meta property="og:image" content="http://139.59.252.217:3000/images/Ad_3_Web.jpg"/>
+	<meta property="og:image" content="http://139.59.252.217:3000/images/campaign1.jpg"/>
+	<meta property="og:image" content="http://139.59.252.217:3000/images/campaign2.jpg"/>
+	<meta property="og:image" content="http://139.59.252.217:3000/images/campaign3.jpg"/>
 	<meta property="og:url" content="http://kashmirblindspot.jkccs.net"/>
 	<meta property="og:site_name" content="JKCCS"/>
 	<meta property="og:description" content="A passionate plea to open eyes and hearts to Kashmir's pain. "/>
 	<meta name="twitter:title" content="JKCCS" />
-	<meta property="twitter:image" content="http://139.59.252.217:3000/images/Ad_1_Web.jpg"/>
-	<meta property="twitter:image" content="http://139.59.252.217:3000/images/Ad_2_Web.jpg"/>
-	<meta property="twitter:image" content="http://139.59.252.217:3000/images/Ad_3_Web.jpg"/>
+	<meta property="twitter:image" content="http://139.59.252.217:3000/images/campaign1.jpg"/>
+	<meta property="twitter:image" content="http://139.59.252.217:3000/images/campaign2.jpg"/>
+	<meta property="twitter:image" content="http://139.59.252.217:3000/images/campaign3.jpg"/>
 	<meta name="twitter:url" content="http://kashmirblindspot.jkccs.net" />
 	<meta name="twitter:card" content="A passionate plea to open eyes and hearts to Kashmir’s pain." />
 
