--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-push-6 col-md-6 full-height js-full-height">
+							<div style="position: absolute; bottom: 0px; left: 117px; font-size: 9px;">
+								Picture Courtesy @Showkat Shafi
+							</div>
 							<div class="fh5co-cover-intro">
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="padding-top: 100px;">Messages from a Blind Spot</h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A passionate plea to open eyes and hearts to Kashmir’s pain.</h2>
