--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									 The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at drawing the attention of the world community toward the blind-spot Kashmir has turned into over the years.
 									</p>
 								</div>
-								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#campaign" class="btn btn-primary btn-outline btn-lg">Show your support</a></p>
+								<p class="wow fadeInUp support" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#campaign" class="btn btn-primary btn-outline btn-lg">Show your support</a></p>
 							</div>
 						</div>
 					</div>
@@ -179,7 +179,7 @@
     						<div class="hovereffect">
         					<img class="img-responsive" src="images/Ad_1_Web.jpg" alt="">
             			<div class="overlay">
-	                	<a href="/images/Ad_1_Web.jpg" target="_blank"><h2>Share Now</h2></a>
+	                	<a href="/images/Ad_1_Web.jpg" target="_blank"><h2 class="share"> Share Now</h2></a>
 	                	<p class="icon-links">
 	                    <a href="whatsapp://send?text=%23KashmirBlindSpotCampaign%3A%20A%20passionate%20plea%20to%20open%20eyes%20and%20hearts%20to%20Kashmir's%20pain.http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-whatsapp"></span>
@@ -204,7 +204,7 @@
 	            	<div class="hovereffect">
         					<img class="img-responsive" src="images/Ad_2_Web.jpg" alt="">
             			<div class="overlay">
-	                	<a href="/images/Ad_2_Web.jpg" target="_blank"><h2>Share Now</h2></a>
+	                	<a href="/images/Ad_2_Web.jpg" target="_blank"><h2 class="share">Share Now</h2></a>
 	                	<p class="icon-links">
 	                    <a href="whatsapp://send?text=%23KashmirBlindSpotCampaign%3A%20A%20passionate%20plea%20to%20open%20eyes%20and%20hearts%20to%20Kashmir's%20pain.http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-whatsapp"></span>
@@ -229,7 +229,7 @@
 			        	<div class="hovereffect">
         					<img class="img-responsive" src="images/Ad_3_Web.jpg" alt="">
             			<div class="overlay">
-	                	<a href="/images/Ad_3_Web.jpg" target="_blank"><h2>Share Now</h2></a>
+	                	<a href="/images/Ad_3_Web.jpg" target="_blank"><h2 class="share">Share Now</h2></a>
 	                	<p class="icon-links">
 	                    <a href="whatsapp://send?text=%23KashmirBlindSpotCampaign%3A%20A%20passionate%20plea%20to%20open%20eyes%20and%20hearts%20to%20Kashmir's%20pain.http%3A//kashmirblindspot.jkccs.net" target="_blank">
 	                      <span class="fa fa-whatsapp"></span>
