--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 								<div class="icon">
 									<i class="fa fa-heartbeat" aria-hidden="true"></i>
 								</div>
-								<span class="fh5co-counter js-counter" data-from="0" data-to="55" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter js-counter" data-from="0" data-to="69" data-speed="5000" data-refresh-interval="50"></span>
 								<span class="fh5co-counter-label">Deaths</span>
 
 							</div>
@@ -365,7 +365,7 @@
 								</div>
 							</div>
 							<div class="fh5co-text">
-								<p>Nine-year-old Tamana Ashraf of Ganderbal district is another victim being treated at the Srinagar hospital. She was sitting at the window in her house when pellets whizzed by, hitting her left eye, her mother Shamima told Al Jazeera. "I saw a small iron ball in her eye. When we tried to hospitalise her, police stopped us and beat us up. I was crying to see what they had done to my daughter. Luckily we managed to reach here," she said.</p>
+								<p>Nine-year-old Tamana Ashraf of Ganderbal district is another victim being treated at the Srinagar hospital. She was sitting at the window in her house when pellets whizzed by, hitting her left eye, her mother Shamima told Al Jazeera. "I saw a small iron ball in her eye. When we tried to hospitalise her, police stopped us and beat us up. I was crying to see what they had done to my daughter. Luckily we managed to reach here,"</p>
 							</div>
 						</div>
 					</div>
@@ -398,6 +398,54 @@
 							</div>
 							<div class="fh5co-text">
 								<p>Danish, 22, from Rainawari locality of the downtown Srinagar, has been hit in both the eyes and stares into complete darkness. His father, a labourer, sits beside him with drooping shoulders. Danish is not aware of his plight and thinks he can see once his bandage is removed. “I work as a salesman for a private company, I can’t stay here I have to get back to work” he says. </p>
+							</div>
+						</div>
+					</div>
+
+					<div class="clearfix visible-sm-block"></div>
+
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="fh5co-testimonial-item wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">
+							<div class="fh5co-name">
+								<img src="images/black.png" alt="">
+								<div class="fh5co-meta">
+									<h3>[Name Withheld]</h3>
+								</div>
+							</div>
+							<div class="fh5co-text">
+								<p>21 year old male student, Kupwara District. Injured in both eyes with pellets, and in upper part of his body, he may not be able to see again. Paramilitary and police specifically targeted the procession he was part of. 100 people injured and around 20 taken to hospital. Doctors are trying hard to regain his eye sight in one eye which is 70-80% damaged. </p>
+							</div>
+						</div>
+					</div>
+
+					<div class="clearfix visible-sm-block"></div>
+
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="fh5co-testimonial-item wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">
+							<div class="fh5co-name">
+								<img src="images/black.png" alt="">
+								<div class="fh5co-meta">
+									<h3>[Name Withheld]</h3>
+								</div>
+							</div>
+							<div class="fh5co-text">
+								<p>Pellet shotgun injuries in his left eye, as two pellets perforated his eyes while others hit his torso and arms in a protest in Sopore. His left eye was operated upon on Saturday, 6 August, and doctors have yet to inform him on the condition of his eye.</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="clearfix visible-sm-block"></div>
+
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="fh5co-testimonial-item wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">
+							<div class="fh5co-name">
+								<img src="images/black.png" alt="">
+								<div class="fh5co-meta">
+									<h3>[Name Withheld]</h3>
+								</div>
+							</div>
+							<div class="fh5co-text">
+								<p>He has pellet shotgun injuries in his left eye. Doctors have told him that there are 50% chances for him to regain eyesight in his eye. He was part of a protest demonstration when State forces specifically fired pellets at the protestor’s eyes. This is the second time he has been hit by pellets – only ten days ago he was hit by 36 pellets in his leg. </p>
 							</div>
 						</div>
 					</div>
